[gd_scene load_steps=9 format=3 uid="uid://kwwiw6amg8lp"]

[ext_resource type="Texture2D" uid="uid://cwolg3o3xxme3" path="res://assets/images/monsters/placeholder1.png" id="1_f3j5h"]
[ext_resource type="Script" uid="uid://doibi8bs36mfr" path="res://components/MonsterPanel/MonsterPanel.gd" id="1_yi26k"]
[ext_resource type="Texture2D" uid="uid://cyahnq2snuide" path="res://assets/images/types/blaze.png" id="3_4ke38"]
[ext_resource type="Texture2D" uid="uid://pk70y4e8ct7k" path="res://assets/images/icons/health.png" id="4_32yll"]
[ext_resource type="Texture2D" uid="uid://b1gthiaaj14lc" path="res://assets/images/icons/attack.png" id="5_1kwbf"]
[ext_resource type="Texture2D" uid="uid://bt8huus1kt31u" path="res://assets/images/icons/speed.png" id="6_32yll"]
[ext_resource type="Texture2D" uid="uid://5hy34i3p3wq4" path="res://assets/images/icons/action.png" id="6_ru3yr"]
[ext_resource type="Texture2D" uid="uid://bfx0ycg8ihn74" path="res://assets/images/icons/frenzy.png" id="7_2kvee"]

[node name="MonsterPanel" type="Panel"]
offset_right = 384.0
offset_bottom = 128.0
size_flags_vertical = 3
script = ExtResource("1_yi26k")

[node name="MonsterImage" type="TextureRect" parent="."]
custom_minimum_size = Vector2(64, 64)
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 96.0
grow_vertical = 2
texture = ExtResource("1_f3j5h")
expand_mode = 1
stretch_mode = 5

[node name="MonsterElement2" type="TextureRect" parent="."]
custom_minimum_size = Vector2(24, 24)
layout_mode = 1
offset_left = 88.0
offset_top = 4.0
offset_right = 112.0
offset_bottom = 28.0
texture = ExtResource("3_4ke38")
expand_mode = 1

[node name="MonsterElement1" type="TextureRect" parent="."]
custom_minimum_size = Vector2(24, 24)
layout_mode = 1
offset_left = 100.0
offset_top = 4.0
offset_right = 124.0
offset_bottom = 28.0
texture = ExtResource("3_4ke38")
expand_mode = 1

[node name="MonsterName" type="Label" parent="."]
layout_mode = 0
offset_left = 128.0
offset_right = 256.0
offset_bottom = 32.0
text = "Monster Title"
vertical_alignment = 1

[node name="HealthIcon" type="TextureRect" parent="."]
modulate = Color(0.897485, 0.304014, 0.202219, 1)
custom_minimum_size = Vector2(24, 24)
layout_mode = 0
offset_left = 112.0
offset_top = 36.0
offset_right = 136.0
offset_bottom = 60.0
texture = ExtResource("4_32yll")
expand_mode = 1

[node name="HealthLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 140.0
offset_top = 36.0
offset_right = 172.0
offset_bottom = 60.0
text = "99"
vertical_alignment = 1

[node name="AttackIcon" type="TextureRect" parent="."]
modulate = Color(0.996078, 0.847059, 0.278431, 1)
custom_minimum_size = Vector2(24, 24)
layout_mode = 0
offset_left = 112.0
offset_top = 64.0
offset_right = 136.0
offset_bottom = 88.0
texture = ExtResource("5_1kwbf")
expand_mode = 1

[node name="AttackLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 140.0
offset_top = 64.0
offset_right = 172.0
offset_bottom = 88.0
text = "99"
vertical_alignment = 1

[node name="SpeedIcon" type="TextureRect" parent="."]
modulate = Color(0.996078, 0.564706, 1, 1)
custom_minimum_size = Vector2(24, 24)
layout_mode = 0
offset_left = 112.0
offset_top = 92.0
offset_right = 136.0
offset_bottom = 116.0
texture = ExtResource("6_32yll")
expand_mode = 1

[node name="SpeedLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 140.0
offset_top = 92.0
offset_right = 172.0
offset_bottom = 116.0
text = "99"
vertical_alignment = 1

[node name="ActionIcon" type="TextureRect" parent="."]
modulate = Color(0.180392, 0.729412, 0.231373, 1)
custom_minimum_size = Vector2(24, 24)
layout_mode = 0
offset_left = 176.0
offset_top = 36.0
offset_right = 200.0
offset_bottom = 60.0
texture = ExtResource("6_ru3yr")
expand_mode = 1

[node name="ActionLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 204.0
offset_top = 36.0
offset_right = 236.0
offset_bottom = 60.0
text = "99"
vertical_alignment = 1

[node name="FrenzyIcon" type="TextureRect" parent="."]
modulate = Color(0.329692, 0.608729, 1, 1)
custom_minimum_size = Vector2(24, 24)
layout_mode = 0
offset_left = 176.0
offset_top = 64.0
offset_right = 200.0
offset_bottom = 88.0
texture = ExtResource("7_2kvee")
expand_mode = 1

[node name="FrenzyLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 204.0
offset_top = 64.0
offset_right = 236.0
offset_bottom = 88.0
text = "99"
vertical_alignment = 1

[node name="AttackEffectLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 256.0
offset_right = 384.0
offset_bottom = 64.0
text = "Attack Effect Attack Effect"
vertical_alignment = 1
autowrap_mode = 1

[node name="Separator" type="Line2D" parent="."]
position = Vector2(184, 80)
points = PackedVector2Array(64, -16, 152.11, -16, 192, -16)
width = 1.0

[node name="AllyEffectLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 256.0
offset_top = 64.0
offset_right = 384.0
offset_bottom = 128.0
text = "Ally Effect Ally Effect"
vertical_alignment = 1
autowrap_mode = 1
